add gradient color

--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" class="bg-slate-800">
+<body data-sveltekit-preload-data="hover" class="bg-gradient-to-l from-slate-700 to-slate-900">
 	<div style="display: contents">%sveltekit.body%</div>
 </body>
 
